force-app/main/default/objects/CD_Approval_Request__c/CD_Approval_Request__c.object-meta.xml
<CustomObject>
    <label>Approval Request</label>
    <nameField>
        <displayFormat>PAR-{000000}</displayFormat>
        <label>Approval Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>