force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>CD_Agent_Email__c</fullName>
    <formula>CD_Agent_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Email</label>
    <type>Text</type>
</CustomField>