force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>CD_Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>