force-app/main/default/objects/CD_Approval_Request__c/fields/CD_AgentName_txt__c.field-meta.xml
<CustomField>
    <fullName>CD_AgentName_txt__c</fullName>
    <formula>CD_Agent_Name__r.FirstName</formula>
    <label>AgentName</label>
    <type>Text</type>
</CustomField>