force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Approval_Comment__c.field-meta.xml
<CustomField>
    <fullName>CD_Approval_Comment__c</fullName>
    <label>Approval Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>