force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Approval_Rejection_Action__c.field-meta.xml
<CustomField>
    <fullName>CD_Approval_Rejection_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval / Rejection Action</label>
    <type>Checkbox</type>
</CustomField>