force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Approval_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Approval_Rejection_Date__c</fullName>
    <label>Approval/Rejection Date</label>
    <type>Date</type>
</CustomField>