force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Approver__c.field-meta.xml
<CustomField>
    <fullName>CD_Approver__c</fullName>
    <formula>CD_Approver_Name__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApproverName</label>
    <type>Text</type>
</CustomField>