force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>CD_Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Requests_1</relationshipName>
    <type>Lookup</type>
</CustomField>