force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Blocking_Comments__c.field-meta.xml
<CustomField>
    <fullName>CD_Blocking_Comments__c</fullName>
    <label>Blocking Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>