force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Defer_Comments__c.field-meta.xml
<CustomField>
    <fullName>CD_Defer_Comments__c</fullName>
    <label>Defer Comments</label>
    <type>TextArea</type>
</CustomField>