force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>