force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Project__c.field-meta.xml
<CustomField>
    <fullName>CD_Project__c</fullName>
    <formula>Property__r.CD_Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>