force-app/main/default/objects/CD_Approval_Request__c/fields/CD_Property_Name__c.field-meta.xml
<CustomField>
    <fullName>CD_Property_Name__c</fullName>
    <formula>Property__r.CD_Unit_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>