force-app/main/default/objects/CD_Approval_Request__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>Property__r.CD_Client_Name__r.FirstName +&apos; &apos;+ Property__r.CD_Client_Name__r.LastName</formula>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>