force-app/main/default/objects/CD_Approval_Request__c/fields/Project_Approver__c.field-meta.xml
<CustomField>
    <fullName>Project_Approver__c</fullName>
    <formula>IF(Property__r.Property_Approver__r.Id == $User.Id,True,False)</formula>
    <label>Project Approver</label>
    <type>Checkbox</type>
</CustomField>