force-app/main/default/objects/CD_Approval_Request__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <referenceTo>CD_Property__c</referenceTo>
    <relationshipLabel>Approval Requests</relationshipLabel>
    <relationshipName>Approval_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>